--- a/model/EDA.ipynb
+++ b/model/EDA.ipynb
@@ -2700,6 +2700,43 @@
    "source": [
     "tracking_all_weeks_raw.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the sizes of the files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "combine_data: (1797, 18)\n",
+      "ftn_charting: (41643, 29)\n",
+      "injuries: (5682, 16)\n",
+      "rush: (366, 19)\n",
+      "tackle: (50147, 48)\n",
+      "team_rosters: (46163, 37)\n",
+      "games: (136, 8)\n",
+      "players: (1683, 7)\n",
+      "plays: (12486, 35)\n",
+      "tackles: (17426, 7)\n",
+      "tracking_all_weeks: (12187398, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframes = {'combine_data': combine_data_raw,'ftn_charting':ftn_charting_raw,'injuries':injuries_raw,'rush':rush_raw,'tackle':tackle_nfl_raw,'team_rosters':team_rosters_raw,'games':games_raw,'players':players_raw,'plays':plays_raw,'tackles':tackles_raw,'tracking_all_weeks':tracking_all_weeks_raw}\n",
+    "\n",
+    "for name, df in dataframes.items():\n",
+    "    print(f'{name}: {df.shape}')"
+   ]
   }
  ],
  "metadata": {
